--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,8 @@ on:
     types: [published, edited]
 
 permissions:
-  contents: write
+  id-token: write
+  contents: read
 
 jobs:
   create-release:
@@ -15,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Create Release
     env:
-      GITHUB_TOKEN: ${{ secrets.CAZOO_READ_REPO_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: rymndhng/release-on-push-action@177dbe7049eb049501bbdd5dd28a763ab721f183
         with:
