--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,7 @@ on:
     types: [published, edited]
 
 permissions:
-  id-token: write
-  contents: read
+  contents: write
 
 jobs:
   create-release:
