--- a/action.yml
+++ b/action.yml
@@ -42,6 +42,7 @@ runs:
 
 
         ALL_LOCKS=$(curl "$LOCKBOT_ENDPOINT" -H "Authorization: Basic $LOCKBOT_AUTH_TOKEN")
+        echo $ALL_LOCKS
         ENV_IS_LOCKED=$(echo "$ALL_LOCKS" | jq "[.[] | select(.name|test(\"^$ENV_NAME\"))] | length")
         ENV_IS_LOCKED_TO_THIS_BRANCH=$(echo "$ALL_LOCKS" | jq "[.[] | select(.name | split(\"||\") | .[0]==\"$LOCKBOT_ENV_NAME_NO_ACTOR\")] | length")
 
